--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             
         </main>
         <footer class="attribute">
-            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.Coded by <a href="">KINGRay</a>.
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.Coded by <a href="https://github.com/KINGRay007/nft-preview-card-component-main.git">KINGRay</a>.
         </footer>
     </body>
 </html>
